[gd_scene load_steps=11 format=2]

[ext_resource path="res://img/pun_der.png" type="Texture" id=1]
[ext_resource path="res://img/pun_izq.png" type="Texture" id=2]
[ext_resource path="res://img/pre.png" type="Texture" id=3]
[ext_resource path="res://script/Menu_Pregunta.gd" type="Script" id=4]
[ext_resource path="res://img/res.png" type="Texture" id=5]
[ext_resource path="res://fuentes/Pocket Money.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/Control/der:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 968, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/Control/der:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 477, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasLayer/Control/iz:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 956, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasLayer/Control/iz:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 451, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CanvasLayer/Control/ColorRect:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CanvasLayer/Control/ColorRect:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("CanvasLayer/Control/ColorRect:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("CanvasLayer/Control/ColorRect:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=1]
resource_name = "der"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/Control/der:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2900, -0.25, 0, 0.25, 0, 968, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/Control/der:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 477, -0.25, 0, 0.25, 0, 477, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasLayer/Control/iz:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1000, -0.25, 0, 0.25, 0, 956, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasLayer/Control/iz:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 451, -0.25, 0, 0.25, 0, 451, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CanvasLayer/Control/ColorRect:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CanvasLayer/Control/ColorRect:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("CanvasLayer/Control/ColorRect:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("CanvasLayer/Control/ColorRect:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.529412, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=3]
resource_name = "iz"
tracks/0/type = "bezier"
tracks/0/path = NodePath("CanvasLayer/Control/ColorRect:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/Control/ColorRect:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CanvasLayer/Control/ColorRect:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("CanvasLayer/Control/ColorRect:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.529412, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("CanvasLayer/Control/der:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 968, -0.25, 0, 0.25, 0, 2900, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.8 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("CanvasLayer/Control/der:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 477, -0.25, 0, 0.25, 0, 477, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.7 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("CanvasLayer/Control/iz:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 956, -0.25, 0, 0.25, 0, -1000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.7 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("CanvasLayer/Control/iz:position:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 451, -0.25, 0, 0.25, 0, 451, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.3, 0.7 )
}

[node name="Menu_Pregunta" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="der" type="Sprite" parent="CanvasLayer/Control"]
position = Vector2( 968, 477 )
texture = ExtResource( 1 )

[node name="iz" type="Sprite" parent="CanvasLayer/Control"]
position = Vector2( 956, 451 )
texture = ExtResource( 2 )

[node name="Panel" type="Sprite" parent="CanvasLayer/Control"]
position = Vector2( 938, 424 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.141176, 0.145098, 0.141176, 1 )

[node name="res" type="Control" parent="CanvasLayer"]

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/res"]
pause_mode = 2
margin_left = 71.0
margin_top = 854.0
margin_right = 508.0
margin_bottom = 976.0
texture_normal = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="CanvasLayer/res"]
pause_mode = 2
margin_left = 532.0
margin_top = 867.0
margin_right = 937.0
margin_bottom = 983.0
texture_normal = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="CanvasLayer/res"]
pause_mode = 2
margin_left = 995.0
margin_top = 867.0
margin_right = 1400.0
margin_bottom = 983.0
texture_normal = ExtResource( 5 )

[node name="TextureButton4" type="TextureButton" parent="CanvasLayer/res"]
pause_mode = 2
margin_left = 1461.0
margin_top = 862.0
margin_right = 1866.0
margin_bottom = 978.0
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 11.0
margin_top = 294.0
margin_right = 209.0
margin_bottom = 381.0
custom_fonts/font = SubResource( 4 )
text = "Decision"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/der = SubResource( 1 )
anims/iz = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/res/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/res/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="CanvasLayer/res/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="CanvasLayer/res/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_all_completed" from="Tween2" to="." method="_on_Tween2_tween_all_completed"]
